# makerspaceleiden-crm

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  INSTALL.md  README.md  cron-midnight.sh  cron-monthly.sh  cron-pre-monthly.sh  cron-weekly.sh  cron.sh  delete_all_agenda.sh  example.env  loaddemo.ps1  loaddemo.sh  manage.py  pyproject.toml  requirements-dev.txt  requirements-prod.txt  requirements.txt  rollout-prod.sh  rundemo.sh
acl/: admin.py  apps.py  constants.py  forms.py  models.py  test.sh  tests.py  urls.py  views.py
agenda/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
api/: permissions.py  serializers.py  tests.py  urls.py  views.py
avatar/: tests.py  urls.py  utils.py  views.py
chores/: admin.py  apps.py  constants.py  core.py  forms.py  helpers.py  messages.py  models.py  schedule.py  tests.py  urls.py  utils.py  views.py
demo/: README.txt  consolidated.txt  example.json  mac.csv  pricelist.csv  wifi.csv
deploy/: crm-daphne.service  crm-gunicorn.service  gunicorn.conf.py
docs/: msl.dbm
kiosk/: urls.py  views.py
kwh/: apps.py  urls.py  views.py
mailinglists/: admin.py  apps.py  forms.py  mailman.py  models.py  urls.py  views.py
mainssensor/: admin.py  apps.py  decorators.py  forms.py  hexfield.py  models.py  urls.py  views.py
makerspaceleiden/: admin.py  asgi.py  context_processors.py  converters.py  debug.py  decorators.py  local_with_db.py  mail.py  oauth_validators.py  oidc_provider_settings.py  prod.py  settings.py  tests.py  urls.py  utils.py  views.py  wsgi.py
memberbox/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
members/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
motd/: admin.py  apps.py  context_processors.py  forms.py  models.py  urls.py  views.py
mugshotgen/: urls.py  views.py
navigation/: urls.py  views.py
nodered/: apps.py  consumers.py  routing.py  urls.py  views.py
pettycash/: admin.py  apps.py  camt53.py  forms.py  models.py  test.sh  test_views.py  tests.py  urls.py  views.py
pettycredit/: README.md  admin.py  apps.py  models.py  test.sh  urls.py  views.py
scripts/: check-users-in.sh  check-users-out.sh  cron-hourly.sh  update-site-version.sh
search_admin_autocomplete/: admin.py  apps.py
selfservice/: admin.py  aggregator_adapter.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py  waiverform.py
servicelog/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
spaceapi/: apps.py  tests.py  urls.py  views.py
storage/: admin.py  definitions.py  forms.py  models.py  urls.py  views.py
sumup/: README.md  model.py  urls.py  views.py
sumup_connector/: README.md  admin.py  apps.py  forms.py  model.py  models.py  sumupapi.py  test.py  testoff.py  urls.py  views.py
terminal/: ;  admin.py  apps.py  decorators.py  models.py  test.sh  urls.py  util.py  views.py
ufo/: admin.py  apps.py  forms.py  models.py  (+3 more)
(+408 files in other folders)
