[project]
name = "makerspaceleiden-crm"
version = "0.1.0"
description = ""
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = "~=3.13"
readme = "README.md"
dependencies = [
    "django>=4.2.17,<5",
    "pytz~=2023.3.post1",
    "wheel>=0.42.0,<0.43",
    "django-import-export>=3.3.3,<4",
    "django-simple-history>=3.4.0,<4",
    "qrcode>=7.4.2,<8",
    "django-settings-export>=1.2.1,<2",
    "django-stdimage>=6.0.2,<7",
    "django-dynamic-filenames>=1.3.2,<2",
    "django-six>=1.0.5,<2",
    "six>=1.16.0,<2",
    "django-revproxy>=0.12.0,<0.13",
    "pillow>=10.3.0,<11",
    "django-qr-code>=3.1.1,<4",
    "django-ipware>=6.0.0,<7",
    "reportlab>=4.0.7,<5",
    "pypdf2>=3.0.1,<4",
    "lxml>=5.0.0,<6",
    "jsonfield2>=4.0.0.post0,<5",
    "django-money>=3.4.0,<4",
    "requests>=2.32.2,<3",
    "python-dateutil>=2.8.2,<3",
    "django-versatileimagefield~=3.0",
    "mysqlclient>=2.2.0,<3",
    "djproxy>=2.3.6,<3",
    "django-bootstrap5~=23.4",
    "django-flatpickr>=2.0.3,<3",
    "djangorestframework>=3.15.2,<4",
    "channels[daphne]>=4.1.0,<5",
    "websockets~=12.0",
    "jsonschema>=4.23.0",
    "python-magic>=0.4.27",
    "cryptography>=44.0.3",
    "pycryptodome>=3.22.0",
    "django-sendmail-backend>=0.1.2",
    "django-oauth-toolkit>=3.0.1",
]

[dependency-groups]
dev = [
    "poetry-dev",
    "pre-commit",
]

[tool.uv]
package = false
python-preference = "only-managed"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.ruff]
# Enable Pyflakes `E` and `F` codes by default.
lint.ignore = ["E501", "E741"]
